# File_Transfer_Tool

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
